Use border radius; fix overflow

--- a/modules/ext.details.styles/ext.details.styles.less
+++ b/modules/ext.details.styles/ext.details.styles.less
@@ -6,8 +6,10 @@
 	color: @color-base;
 	margin: 1em 0;
 	padding: 0.2em 0.4em;
-	border: @border-width-base @border-style-base @border-color-base;
+	border: @border-base;
+	border-radius: @border-radius-base;
 	font-size: 87.5%;
+	overflow: hidden;
 
 	> summary:first-of-type {
 		margin: -0.2em -0.4em;
